test/error/return_inside_fork.sv
// pattern: encountered return inside fork-join
module top;
    task t;
        fork
            return;
        join
    endtask
    initial t;
endmodule
